--- a/playbooks/roles/streams/templates/docker/config-local.json
+++ b/playbooks/roles/streams/templates/docker/config-local.json
@@ -1,27 +1,24 @@
 {
-    "service_name": "streams",
-    "tenants": ["dev"],
-    "use_sk": false,
-    "log_level": "DEBUG",
+    "primary_site_admin_tenant_base_url": "{{ streams_service_url }}",
+    "service_admin_tenant_id": "admin",
+    "service_tenant_id": "admin",
+    "service_site_id": "{{ streams_service_site_id }}",
+    "service_name": "{{ streams_service_name }}",
+    "tenant": {"tacc": {"stream_db": "StreamsTaccDevelopDB", "tapis_base_url": "https://tacc.develop.tapis.io"}, "dev": {"stream_db": "StreamsDevDevelopDB", "tapis_base_url": "https://dev.develop.tapis.io"}},
+    "tenants": ["dev", "admin"],
+    "log_level": "INFO",
     "show_traceback": false,
-    "dev_token": "sometoken",
-    "local_dev":true,
-    "chords_url":"http://192.168.56.1",
-    "chords_api_key":"",
-    "chords_user_email":"admin@chordsrt.com",
-    "influxdb_host":"192.168.56.1",
-    "influxdb_port":"8086",
-    "influxdb_database":"chords_ts_production",
-    "influxdb_username":"admin",
-    "influxdb_password":"chords_ec_demo",
-    "streams_user":"streams",
-    "streams_account_type":"service",
-    "stream_db":"StreamsTACCDB",
-    "tapis_base_url":"https://dev.develop.tapis.io",
-    "tapis_tenant":"dev",
-    "service_password": "",
+    "chords_url": "http://chords-app:80",
+    "chords_user_email": "streams@admin.tapis",
+    "influxdb_host": "http://chords-influxdb2",
+    "influxdb_port": "8086",
+    "influxdb_database": "chords_ts_production",
+    "influxdb_username": "admin",
+    "streams_user": "streams",
+    "streams_account_type": "service",
     "ignore_auth": true,
-    "kapacitor_username": "admin",
-    "kapacitor_password": "admin kapacitor",
-    "kapacitor_url":"http://localhost:9092"
+    "influxdb_token": "myawesometapistoken",
+    "influxdb_bucket": "streams",
+    "influxdb_org": "tapis",
+    "alert_secret" : "myAlertSecret"
   }
