fixed templating on streams/meta / moved getting token in test to functions

--- a/playbooks/roles/monitoring/templates/docker/docker-compose.yml
+++ b/playbooks/roles/monitoring/templates/docker/docker-compose.yml
@@ -6,23 +6,58 @@ networks:
 
 
 services:
-  monitoring-elisticsearch:
+  monitoring-elasticsearch:
+    container_name: monitoring-elasticsearch
+    image: {{ monitoring_elasticsearch_image }}
     networks: 
       - tapis
+    environment:
+      - discovery.type=single-node
+      - search.max_buckets=65535
+      - ES_JAVA_OPTS=-Xmx8G -Xmx8G -Dlog4j2.formatMsgNoLookups=true
+      - xpack.security.enabled=false
+      - cluster.routing.allocation.disk.watermark.enable_for_single_data_node=true
+    volumes:
+      - {{ tapisdatadir}}/monitoring/elasticsearch/data:/usr/share/elasticsearch/data
 
   monitoring-grafana:
+    container_name: monitoring-grafana
+    image: {{ monitoring_grafana_image }}
     networks: 
       - tapis
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_SERVER_DOMAIN={{  monitoring_service_url |replace("https://", "") }}
+      - GF_SERVER_ROOT_URL=%(protocol)s://%(domain)s/grafana
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+    volumes: 
+      - {{ tapisdatadir }}/monitoring/grafana/data:/var/lib/grafana
+      - {{ tapisdatadir }}/monitoring/grafana/grafana-datasources.yaml:/etc/grafana/provisioning/datasources/prometheus.yaml
+
 
   monitoring-kibana:
+    container_name: monitoring-kibana
+    image: {{ monitoring_kibana_image }}
     networks: 
       - tapis
+    environment:
+      - ELASTICSEARCH_HOSTS=http://monitoring-elasticsearch:9200
+      - ELASTICSEARCH_URL=http://monitoring-elasticsearch:9200
 
   monitoring-prometheus:
+    container_name: monitoring-prometheus
+    image: {{ monitoring_prometheus_image }}
     networks: 
       - tapis
+    environment:
+    volumes:
+      - {{ tapisdatadir }}/monitoring/prometheus/prometheus-config.yml:/etc/prometheus/prometheus.yml
+      - {{ tapisdatadir }}/monitoring/prometheus/data:/prometheus
 
   monitoring-tapis-exporter:
+    container_name: monitoring-tapis-exporter
+    image: {{ monitoring_tapis_exporter_image }}
     networks: 
       - tapis
 
