--- a/playbooks/roles/jobs/defaults/main/images.yml
+++ b/playbooks/roles/jobs/defaults/main/images.yml
@@ -4,3 +4,4 @@ jobs_worker_image: tapis/jobsworker:1.5.0
 jobs_postgres_image: postgres:12.4
 jobs_pgadmin_image: dpage/pgadmin4:6.20
 jobs_rabbitmq_management_image: rabbitmq:3.8.11-management
+jobs_util_image: tapis/ubutil2204:1.5.0
