--- a/playbooks/roles/meta/defaults/main/images.yml
+++ b/playbooks/roles/meta/defaults/main/images.yml
@@ -5,3 +5,4 @@ meta_mongo_singlenode_image: tapis/mongo-singlenode:4.4.6-bionic
 meta_mongodb_backup_image: tapis/mongodb-backup:1
 meta_mongobackup_image: tapis/mongobackup:1.5.0
 meta_alpine_image: alpine:3.17
+meta_util_image: tapis/ubutil2204:1.5.0
