--- a/playbooks/roles/streams/defaults/main/images.yml
+++ b/playbooks/roles/streams/defaults/main/images.yml
@@ -5,3 +5,4 @@ streams_mysql_image: mysql:5.7
 streams_chords_image: ncareol/chords:1.0
 streams_tapis_chords_app_image: scleveland/tapis-chords-app:0.9.8.2.3
 streams_api_image: tapis/streams-api:1.5.0
+streams_util_image: tapis/ubutil2204:1.5.0
