--- a/playbooks/roles/tenants/defaults/main/images.yml
+++ b/playbooks/roles/tenants/defaults/main/images.yml
@@ -3,3 +3,4 @@ tenants_postgres_image: postgres:11.4
 tenants_api_image: tapis/tenants-api:1.5.0
 tenants_migrations_image: tapis/tenants-api-migrations:1.5.0
 tenants_api_tests_image: tapis/tenants-api-tests:1.5.0
+tenants_util_image: tapis/ubutil2204:1.5.0
