--- a/playbooks/roles/tokens/defaults/main/images.yml
+++ b/playbooks/roles/tokens/defaults/main/images.yml
@@ -1,2 +1,3 @@
 tokens_api_image: tapis/tokens-api:1.5.0
 tokens_api_tests_image: tapis/tokens-api-tests:1.5.0
+tokens_util_image: tapis/ubutil2204:1.5.0
