Changes for connecting docker to K8 for pods/workflows

--- a/playbooks/roles/proxy/templates/docker/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pods.conf
@@ -1,6 +1,8 @@
 # pods
 location /v3/pods
 {            
+    auth_request /_auth;
+    error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
     set $upstream "{{ proxy_service_url }}";
