--- a/playbooks/roles/jobs/templates/docker/docker-compose.yml
+++ b/playbooks/roles/jobs/templates/docker/docker-compose.yml
@@ -35,7 +35,8 @@ services:
             jobs-rabbitmq:
                 condition: service_healthy
     {% if jobs_port is not none %}
-    ports: "{{jobs_port}}:8080"
+    ports: 
+        - "{{jobs_port}}:8080"
     {% endif %}
 
     jobs-postgres:
