--- a/playbooks/roles/proxy/templates/docker/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/jobs.conf
@@ -5,7 +5,12 @@ location /v3/jobs
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://jobs-api:8080";
+    {% if jobs_host is defined %}
+set $upstream "{{jobs_host}}:{{jobs_port}}";
+    {% else %}
+set $upstream "http://jobs-api:8080";
+    {% endif %}
+    
     proxy_pass $upstream;
     
 
