--- a/playbooks/roles/proxy/templates/docker/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/jobs.conf
@@ -5,11 +5,7 @@ location /v3/jobs
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    {% if jobs_host is defined %}
-set $upstream "{{jobs_host}}:{{jobs_port}}";
-    {% else %}
-set $upstream "http://jobs-api:8080";
-    {% endif %}
+    set $upstream {{ apps_host | default("http://apps-api:;")}}:{{ apps_port | default("8080")}};
     
     proxy_pass $upstream;
     
