--- a/playbooks/roles/proxy/templates/docker/locations/notifications.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/notifications.conf
@@ -5,7 +5,8 @@ location /v3/notifications
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://notifications-api:8080";
+    # set $upstream "http://notifications-api:8080";
+    set $upstream {{ notifications_host | default("http://notifications-api:;")}}:{{ notifications_port | default("8080")}};
     proxy_pass $upstream;
     
 
