--- a/playbooks/roles/proxy/templates/docker/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/jobs.conf
@@ -5,7 +5,7 @@ location /v3/jobs
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream {{ apps_host | default("http://apps-api:;")}}:{{ apps_port | default("8080")}};
+    set $upstream {{ apps_host | default("http://jobs-api:;")}}:{{ jobs_port | default("8080")}};
     
     proxy_pass $upstream;
     
