--- a/playbooks/roles/proxy/templates/docker/locations/files.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/files.conf
@@ -6,7 +6,7 @@ location /v3/files
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://files-api:8080"; 
+    set $upstream {{ files_host | default("http://files-api:;")}}:{{ files_port | default("8080")}};
     proxy_pass $upstream;
 
     proxy_redirect off;
