--- a/playbooks/roles/proxy/templates/docker/locations/systems.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/systems.conf
@@ -6,7 +6,7 @@ location /v3/systems
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://systems-api:8080";
+    set $upstream {{ systems_host | default("http://systems-api:;")}}:{{ systems_port | default("8080")}};
     proxy_pass $upstream;
     
 
