--- a/playbooks/roles/systems/templates/docker/docker-compose.yml
+++ b/playbooks/roles/systems/templates/docker/docker-compose.yml
@@ -22,6 +22,10 @@ services:
         depends_on:
             systems-migrations:
                 condition: service_completed_successfully
+    {% if systems_port is not none %}
+    ports: 
+            - "{{systems_port}}:8080"
+    {% endif %}
         
     systems-postgres:
         container_name: systems-postgres
