--- a/playbooks/roles/streams/templates/kube/influx2/deploy.yml
+++ b/playbooks/roles/streams/templates/kube/influx2/deploy.yml
@@ -45,7 +45,7 @@ spec:
               key: mysql-password
         volumeMounts:
         - name: influx-data
-          mountPath: "/var/lib/influxdb"
+          mountPath: "/var/lib/influxdb2"
       volumes:
       - name: influx-data
         persistentVolumeClaim:
