Deployer 1.5.4: Updating abaco so mongo doesn't break during restarts. Updated gunicorn settings. Bump tag.

--- a/playbooks/roles/actors/defaults/main/vars.yml
+++ b/playbooks/roles/actors/defaults/main/vars.yml
@@ -6,7 +6,7 @@ actors_service_url: '{{ global_service_url }}'
 actors_service_tenant_id: admin
 actors_service_site_id: '{{ global_site_id }}'
 actors_service_name: actors
-actors_service_version: 1.5.0
+actors_service_version: 1.5.1
 actors_storage_class: '{{ global_storage_class }}'
 actors_rabbit_pvc: actors-rabbitmq-vol01
 actors_mongo_pvc: actors-mongo-vol01
@@ -15,6 +15,8 @@ actors_mongo_tls: false
 actors_image_pull_policy: Always
 actors_host_path: develop
 actors_timeout: 60
+actors_threads: 6
+actors_processes: 8
 actors_tas_role_acct: ""
 actors_tas_role_pass: ""
 actors_mongo_init_database: null
