Update mount path for nfs server in workflow engine

--- a/playbooks/roles/workflows/templates/kube/engine/deployment.yml
+++ b/playbooks/roles/workflows/templates/kube/engine/deployment.yml
@@ -83,7 +83,7 @@ spec:
           tty: true
           volumeMounts:
             - name: pipelines-mount
-              mountPath: /mnt/pipelines/
+              mountPath: /var/lib/open-workflow-engine
       volumes:
         - name: pipelines-mount
           nfs: 
