--- a/playbooks/roles/proxy/templates/docker/nginx.conf
+++ b/playbooks/roles/proxy/templates/docker/nginx.conf
@@ -10,49 +10,45 @@ events {
 }
 
 {% if "pods" in components_to_deploy %}
-# Everything routes through here. Either goes to Pods or HTTP stanza 
+### Everything first goes through this stream stanza. Map matches subdomain to port to route to.
+### If no map found, we route to default 8443. This directs back to HTTP stanza as normal.
 stream {
+
     log_format stream_routing '$remote_addr [$time_local] '
                               'with SNI name "$ssl_preread_server_name" '
                               'proxying to "$instanceport" '
                               '$protocol $status $bytes_sent $bytes_received '
                               '$session_time';
 
-    # 'map's input request SNI (domain name) to output port.
-    # Ports used are purely random
+    # 'map' maps input string to output variable. Regex works.
+    # Ports used are purely random. Feel free to change.
     map $ssl_preread_server_name $instanceport {
-        # *.pods.tenant.environment.tapis.io routes to pods-traefik
-        "~*.pods.{{ proxy_nginx_server_name }}"      5510;
-        # Route non-pod requests to 8443 which is read by http stanza
-        "~{{proxy_nginx_server_name}}"           8443;
-        # Else default to 5510 which routes to pods (required for Postgres)
-        default                         5510;
+        # Route TCP with following whatever.pods.whatever.develop.tapis.ioto pods-nginx.
+        "~pods.{{ proxy_nginx_server_name }}"      5510;
+        # Else default to 8443 (listened to by http stanza).
+        default                         8443;
     }
 
-    # 'pods_upstream' routes to traefik. Backup is HTTP stanza.
-    # Works even if pods_service is down.
-    upstream pods_upstream {
-        server "{{proxy_service_url}}";  ### Attention: Should be set to ip of K8.
-        server 127.0.0.1:8443 backup;
-    }
+    # pods_service. Route TCP to pods-nginx pod.
+    # server {
+    #     listen                 5510;
+    #     ssl_preread            off;
+    #     proxy_timeout          600s;
+    #     access_log /dev/stdout stream_routing;        # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
+    #     # should what I'm doing here.
+        
+    #     proxy_pass pods-traefik:80;
+        
 
-    # 5510 routes to pod_service traefik pod. Backup is HTTP stanza.
-    server {
-        listen                 5510;
-        ssl_preread            off;
-        proxy_timeout          600s;
-        #access_log /dev/stdout stream_routing; # debug log if needed
-        proxy_pass             pods_upstream;
-        proxy_next_upstream    on;
-    }
+    # }
 
     # Listen for all incoming requests. Preread server name (for mapping). Then pass.
     server {
         listen                  443;
         ssl_preread             on;
-        proxy_timeout           600s;
         proxy_connect_timeout   20s;  # max time to connect to pserver
-        #access_log /dev/stdout stream_routing;
+        proxy_timeout           600s;
+        access_log /dev/stdout stream_routing;
         proxy_pass              127.0.0.1:$instanceport;
     }
 }
