--- a/playbooks/roles/proxy/templates/docker/locations/actors.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/actors.conf
@@ -5,10 +5,9 @@ location /v3/actors
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://actors-nginx:80";
+    set $upstream "{{ actors_location }}";
     proxy_pass $upstream;
     
-
     proxy_redirect off;
     proxy_set_header Host $host;
 }
