--- a/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
@@ -2,7 +2,7 @@
 location /v3/globus-proxy
 {            
     resolver 127.0.0.11;
-    set $upstream "http://globus-proxy:5000";
+    set $upstream "{{ globus_proxy_location }}";
     proxy_pass $upstream;
     
     proxy_redirect off;
