--- a/playbooks/roles/proxy/templates/docker/locations/notifications.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/notifications.conf
@@ -6,7 +6,7 @@ location /v3/notifications
 
     resolver 127.0.0.11;
     # set $upstream "http://notifications-api:8080";
-    set $upstream {{ notifications_host | default("http://notifications-api:;")}}:{{ notifications_port | default("8080")}};
+    set $upstream "{{ notifications_location }}";
     proxy_pass $upstream;
     
 
