--- a/playbooks/roles/proxy/templates/docker/locations/pgrest.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pgrest.conf
@@ -6,7 +6,7 @@ location /v3/pgrest
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://pgrest-api:5000";
+    set $upstream "{{ pgrest_location }}";
     proxy_pass $upstream;
     
 
