--- a/playbooks/roles/proxy/templates/docker/locations/security.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/security.conf
@@ -5,7 +5,7 @@ location /v3/security
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://security-api:8080";
+    set $upstream "{{ security_location }}";
     proxy_pass $upstream;
     
 
