--- a/playbooks/roles/proxy/templates/docker/locations/sites.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/sites.conf
@@ -6,7 +6,7 @@ location /v3/sites
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://tenants-api:5000";
+    set $upstream "{{ sites_location }}";
     proxy_pass $upstream;
     
 
