--- a/playbooks/roles/proxy/templates/docker/locations/workflows.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/workflows.conf
@@ -5,7 +5,7 @@ location /v3/workflows
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://workflows-api-service:8000";
+    set $upstream "{{ workflows_location }}";
     proxy_pass $upstream;
     
 
