--- a/playbooks/roles/proxy/templates/docker/locations/apps.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/apps.conf
@@ -6,7 +6,7 @@ location /v3/apps
 
     resolver 127.0.0.11;
     
-    set $upstream {{ apps_host | default("http://apps-api:;")}}:{{ apps_port | default("8080")}};
+    set $upstream "{{ apps_location }}";
     proxy_pass $upstream;
 
     proxy_redirect off;
