--- a/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
@@ -5,7 +5,7 @@ location /v3/oauth2
     error_page 500 /token-revoked.json;
 
     resolver 127.0.0.11;
-    set $upstream "http://authenticator-api:5000";
+    set $upstream "{{ authenticator_location }}";
     proxy_pass $upstream;
 
     proxy_redirect off;
