--- a/playbooks/roles/proxy/templates/docker/locations/meta.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/meta.conf
@@ -7,6 +7,7 @@ location /v3/meta
 
     resolver 127.0.0.11;
     set $upstream "http://restheart-security:8080";
+        set $upstream "{{ meta_location }}";
     proxy_pass $upstream;
 
 
