--- a/playbooks/roles/proxy/templates/docker/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pods.conf
@@ -5,7 +5,7 @@ location /v3/pods
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "{{ proxy_service_url }}";
+    set $upstream "{{ pods_location }}";
     proxy_pass $upstream;
     
 
