--- a/playbooks/roles/proxy/templates/docker/locations/site-router.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/site-router.conf
@@ -4,7 +4,7 @@ location /v3/site-router
     # this location intentionally does NOT get an auth_request directive since the site-router endpoints IS the target of auth_request.
 
     resolver 127.0.0.11;
-    set $upstream "http://site-router:8000";
+    set $upstream "{{ site_router_location }}";
     proxy_pass $upstream;
     
     proxy_redirect off;
