--- a/playbooks/roles/proxy/templates/docker/locations/streams.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/streams.conf
@@ -5,7 +5,7 @@ location /v3/streams
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://streams-api:5000";    
+    set $upstream "{{ streams_location }}";
     proxy_pass $upstream;
     
 
