--- a/playbooks/roles/proxy/templates/docker/locations/tenants.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tenants.conf
@@ -5,7 +5,7 @@ location /v3/tenants
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://tenants-api:5000";
+    set $upstream "{{ tenants_location }}";
     proxy_pass $upstream;            
     
     proxy_redirect off;
