--- a/playbooks/roles/proxy/templates/docker/locations/tokens.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tokens.conf
@@ -5,7 +5,7 @@ location /v3/tokens
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://tokens-api:5000";
+    set $upstream "{{ tokens_location }}";
     proxy_pass $upstream;
     
     proxy_redirect off;
