--- a/playbooks/roles/get_defaults/defaults/main/vars.yml
+++ b/playbooks/roles/get_defaults/defaults/main/vars.yml
@@ -1,7 +1,7 @@
 tapisdir_default: '{{ ansible_env.HOME }}/.tapis/{{ inventory_hostname }}'
 tapisdatadir_default: '{{ ansible_env.HOME }}/.tapis-data/{{ inventory_hostname }}'
 global_service_tenant_id_default: admin
-global_vault_url_default: 'http://vault:8200'
+global_vault_url_default: http://vault:8200
 global_service_url_default: 'https://{{ global_service_tenant_id_default }}.{{ global_tapis_domain }}'
 global_devtenant_url_default: 'https://dev.{{ global_tapis_domain }}'
 global_primary_site_admin_tenant_base_url_default: 'https://admin.{{ global_tapis_domain }}'
